Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Php The Right Way in Hebrew</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Php The Right Way Hebrew Translation</h2>
       <a href="https://github.com/eranmatis/php-the-right-way-in-hebrew" class="btn">View on GitHub</a>
       <a href="https://github.com/eranmatis/php-the-right-way-in-hebrew/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/eranmatis/php-the-right-way-in-hebrew/tarball/master" class="btn">Download .tar.gz</a>
